# CopperCLPUSD

./: .env.example  .gitignore  1.2_Cobre_Nominal-Real_mensual_BML-COMEX_1960-2015.xls  Cobre Cochilco 20150101 20151003 20151003.xls  Cobre Cochilco 20150101 20151023 20151023.xls  Cobre Cochilco 20150101 20151219 20151219.xls  Cuadro_2 20151003.xls  DatosBCCH.xlsx  Makefile  README.md  main.py  pyproject.toml
.claude/commands/: add-experiment.md
.ipynb_checkpoints/: Copper vs Dollar-checkpoint.ipynb
copper_clp/: config.py  dataset.py  experiment.py  features.py  plots.py  twelvedata.py
models/: 01_lag_correlation.json  02_granger.json  04_ml_results.json  05_timesfm.json  05c_timesfm_copper.json  06_ollama_llm.json  07_backtest.json  08_backtest_ctc.json  09_backtest_xtb.json  10_backtest_strategyB_real.json  12_backtest_corrected.json  latest_signal.json  paper_trade_log.json  walk_forward_results.json
mt5/: PercentileReversion_USDCLP.mq5  README.md  README_PercentileReversion.md  StrategyA_CLPUSD.mq5
notebooks/: 01_lag_correlation.py  02_granger_causality.py  03_feature_engineering.py  04_ml_models.py  05_timesfm.py  05b_timesfm_500m.py  05c_timesfm_with_copper.py  06_ollama_llm.py  07_backtest.py  08_backtest_ctc.py  09_backtest_xtb.py  10_backtest_strategyB_real.py  11_rebuild_features_td.py  12_backtest_corrected.py
reports/: 2026-07-10-broker-costs-usdclp.md  broker_research.md  conclusions.md  handoff.md  lessons_learned.md  ma_fade_findings.md  percentile_reversion_analysis.md  research_notes.md
scripts/: ma_fade_backtest.py  ma_fade_filtered.py
(+7 files in other folders)
